--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   <li><a href="https://www.youtube.com/watch?v=qp5AXBHxQec"> sweep</a></li>
   <li><a href="https://www.youtube.com/watch?v=oNyK0lwq_cc"> double wrist lock</a></li>
 </ul>
+<script src="studio.js"></script>
 </body>
     </html>
 
